Update Head key

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -28,7 +28,7 @@
         <!---左侧边栏结束-->
         <!---右侧边栏开始-->
         <div class="col-xs-12 col-sm-12 col-md-10" style="height: 100%">          
-            <div class="panel panel-info" style="margin:3px 0px 6px 0px;">
+            <div class="panel panel-warning" style="margin:3px 0px 6px 0px;">
             <div class="panel-heading">庄宿正的官方网站欢迎您！</div>
             <div class="panel-body">
                 <h1 style="font-size:16px;"><center>庄宿正的官方网站-中国专业IT社区Yy-Blog 创立于2019年，致力于为中国软件开发者提供知识传播、在线学习、职业发展、学习笔记等全生命周期服务。</center></h1>
